--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Introduction to flashier"
+title: "Introduction to `flashier`"
 author: "Jason Willwerscheid"
-date: "02/21/2022"
+date: "07/18/2023"
 output: 
   rmarkdown::html_vignette:
     toc: true
@@ -20,7 +20,7 @@ library(ggplot2)
 
 ## Model
 
-The empirical Bayes matrix factorization (EBMF) model sets
+The empirical Bayes matrix factorization (EBMF) model puts
 $$ Y = LF^T + E, $$
 where $Y$ is an ${n \times p}$ data matrix, $L$ is an ${n \times K}$ matrix of "loadings" $\ell_1, \ldots, \ell_K$, $F$ is a ${p \times K}$ matrix of "factors" $f_1, \ldots, f_K$, and $E$ is an ${n \times p}$ matrix of residuals with
 $$ e_{ij} \sim N(0, 1 / \tau_{ij}).$$
@@ -28,65 +28,34 @@ The model puts priors on each factor and each set of loadings:
 $$\ell_k \sim g^{(\ell)}_k,\ f_k \sim g^{(f)}_k,$$
 with the priors $g^{(\ell)}_k$ and $g^{(f)}_k$ assumed to belong to some families of distributions $\mathcal{G}^{(\ell)}$ and $\mathcal{G}^{(f)}$ and then estimated using the data. The default is the family of point-normal distributions:
 $$ g \sim \pi_0 \delta_0 + (1 - \pi_0) N(0, \sigma^2), $$
-where both $\pi_0$ and $\sigma^2$ are free parameters. To avoid over-parametrization, it's also necessary to make some assumptions about the precision parameters $\tau_{ij}$. The default assumption is that all $\tau_{ij}$s are equal:
+where both $\pi_0$ and $\sigma^2$ are free parameters. To avoid over-parametrization, it is also necessary to make some assumptions about the precision parameters $\tau_{ij}$. The default assumption is that all $\tau_{ij}$s are equal:
 $$ e_{ij} \sim N(0, 1 / \tau).$$
 
-Note that when the prior families $\mathcal{G}^{(\ell)}$ and $\mathcal{G}^{(f)}$ are closed under scaling (as is typically the case), then the above model isn't identifiable. In particular, the scale of the loadings $\ell_k$ is in itself meaningless, as is the scale of the factors $f_k$. We can make the factorization unique by writing
+Note that when the prior families $\mathcal{G}^{(\ell)}$ and $\mathcal{G}^{(f)}$ are closed under scaling (as is typically the case), then the above model is not identifiable. In particular, the scale of the loadings $\ell_k$ is in itself meaningless, as is the scale of the factors $f_k$. We can make the factorization unique by writing
 $$ Y = LDF' + E, $$
-with the scales of loadings $\ell_1, \ldots, \ell_K$ and factors $f_1, \ldots, f_K$ constrained in some fashion (for example, by setting $\| \ell_k \|_2 = 1$ and $\| f_k \| = 1$ for all $k$).
+with the scales of loadings $\ell_1, \ldots, \ell_K$ and factors $f_1, \ldots, f_K$ constrained in some fashion (for example, by setting $\| \ell_k \|_2 = 1$ and $\| f_k \|_2 = 1$ for all $k$).
 
 ## Basic example
 
-As a running example throughout the vignette, I use 2000 tests from the GTEx project, which comprise a subset of the `strong` dataset described [here](https://stephenslab.github.io/mashr/articles/eQTL_outline.html). While EBMF can "automatically" select the number of factor/loadings pairs $K$ (pairs are no longer added when they fail to yield an increase in the variational lower bound on the log likelihood, or ELBO), I cap $K$ at 5 using parameter `greedy.Kmax`:
+As a running example throughout the vignette, I use 1000 tests from the GTEx project, which comprise a subset of the `strong` dataset described [here](https://stephenslab.github.io/mashr/articles/eQTL_outline.html). While EBMF can "automatically" select the number of factor/loadings pairs $K$ (pairs are no longer added when they fail to yield an increase in the variational lower bound on the log likelihood, or ELBO), I cap $K$ at 5 using parameter `greedy_Kmax`:
 
 ```{r gtex.const}
-data(gtex, gtex.colors)
-gtex.const <- flash(gtex, greedy.Kmax = 5)
+data(gtex, gtex_colors)
+gtex_const <- flash(gtex, greedy_Kmax = 5)
 ```
-
-(The "nullcheck" is a simple check that is run after fitting has completed: `flashier` removes each factor/loadings pair one at a time and verifies that its removal doesn't produce an improvement in the ELBO. If it does, then the factor/loadings pair is removed from the final fit.)
 
 The returned `flash` object is a list that contains useful information about the fit. For example, the ELBO attained using the default variance structure (with all $\tau_{ij}$s equal) is
 
 ```{r gtex.output}
-gtex.const$elbo
+gtex_const$elbo
 ```
 
-A few useful methods have also been provided, including `fitted` (which returns $\mathbb{E} (LF')$), `residuals` (which yields the matrix of expected residuals $Y - \mathbb{E} (LF')$), and `ldf` (which gives the $LDF'$ factorization with the scaling of loadings and factors determined by parameter `type`).
+A few useful methods have been provided, including `fitted` (which returns $\mathbb{E} (LF')$), `residuals` (which yields the matrix of expected residuals $Y - \mathbb{E} (LF')$), and `ldf` (which gives the $LDF'$ factorization with the scaling of loadings and factors determined by parameter `type`).
 
-The factors appear as follows:
+A convenient `plot` method is also provided:
 
 ```{r plot.fn}
-plot.factors <- function(fl) {
-  vals <- ldf(fl)$F
-  
-  data <- reshape2::melt(vals)
-  min.val <- min(0, min(vals))
-  max.val <- max(0, max(vals))
-  
-  colnames(data) <- c("variable", "k", "value")
-  data$k <- as.factor(data$k)
-  ggplot(data, aes_string(x = "variable", y = "value", fill = "variable")) +
-    geom_bar(stat = "identity", width = 0.6) +
-    scale_fill_manual(values = gtex.colors) +
-    scale_x_discrete(labels = NULL) +
-    ylim(min.val, max.val) +
-    theme_grey() +
-    theme(
-      legend.position = "right",
-      legend.text = element_text(size = 6),
-      legend.title = element_blank()
-    ) +
-    labs(y = "", x = "") +
-    facet_wrap(~k, ncol = 2) +
-    guides(fill = guide_legend(
-      ncol = 1, 
-      keyheight = 3.75 / 6, 
-      keywidth = 3.75 / 15)
-    )
-}
-
-plot.factors(gtex.const)
+plot(gtex_const, pm_colors = gtex_colors)
 ```
 
 ## Variance structures
@@ -100,35 +69,27 @@ $$ E_{ij} \sim N(0, 1 / \tau_j).$$
 In `flashier`, the residual variance structure is defined by specifying the $\tau^{(n)}$s whose elements are allowed to vary. For example, row-specific variances can be fit as follows:
 
 ```{r gtex.byrow}
-byrow.time <- system.time(
-  gtex.byrow <- flash(gtex, greedy.Kmax = 5, var.type = 1, verbose = 0)
-)
-c(const.elbo = gtex.const$elbo, byrow.elbo = gtex.byrow$elbo)
+gtex_byrow <- flash(gtex, greedy_Kmax = 5, var_type = 1, verbose = 0)
+c(const_elbo = gtex_const$elbo, byrow_elbo = gtex_byrow$elbo)
 ```
 
-(I set `verbose = 0` to suppress progress updates.) Since the assumption of row-specific variances is much more flexible than the assumption of a constant residual variance (and includes it as a special case), the objective has increased considerably. The factors also look much nicer.
+(I set `verbose = 0` to suppress progress updates.) Since the assumption of row-specific variances is much more flexible than the assumption of a constant residual variance (and includes it as a special case), the objective has increased considerably. The factors appear as follows:
 
-```{r plot.byrow}
-plot.factors(gtex.byrow)
+```{r gtex.byrow.plot}
+plot(gtex_byrow, pm_colors = gtex_colors, include_scree = FALSE)
 ```
 
 The general rank-one case can be fit as follows.
 ```{r gtex.kronecker}
-kronecker.time <- system.time(
-  gtex.kronecker <- flash(gtex, greedy.Kmax = 5, var.type = c(1, 2), verbose = 0)
-)
-c(const.elbo = gtex.const$elbo, byrow.elbo = gtex.byrow$elbo, kron.elbo = gtex.kronecker$elbo)
+gtex_kronecker <- flash(gtex, greedy_Kmax = 5, var_type = c(1, 2), verbose = 0)
+c(const_elbo = gtex_const$elbo, byrow_elbo = gtex_byrow$elbo, kron_elbo = gtex_kronecker$elbo)
 ```
 
-It's worth noting that the precision parameters can be obtained analytically when they vary along a single dimension (rows or columns). When more than one dimension is used, they must be estimated via an alternating maximization algorithm, which is much slower:
-
-```{r timing}
-c(byrow = byrow.time[3], kron = kronecker.time[3])
-```
+It is worth noting that the precision parameters can be obtained analytically when they vary along a single dimension (rows or columns). When more than one dimension is used, they must be estimated via an alternating maximization algorithm, which is typically slower.
 
 ## Measurement error
 
-It's possible that the data $Y$ is observed with some known error. In such a case, it might be preferable to fit the model
+It is possible that the data $Y$ is observed with some known error. In such a case, it might be preferable to fit the model
 
 $$ Y = L F' + S + E, $$
 where $S_{ij} \sim N(0, s^2_{ij})$ and the $s^2_{ij}$s are fixed. In other words, one might prefer to fit the model
@@ -136,61 +97,61 @@ $$ Y_{ij} \sim N \left(\sum_k \ell_{ik} f_{jk}, s^2_{ij} + 1 / \tau_{ij}\right).
 
 In some cases, this model can nearly be reduced to the model described above. For example, since the `gtex` data is a matrix of $z$-scores, one might set the $s_{ij}$s equal to one. With, for example, row-specific residual variances, this yields the model
 $$ Y_{ij} \sim N \left(\sum_k \ell_{ik} f_{jk}, \sigma^2_{j} + 1 \right). $$
-This is almost the same as the model described in the previous section, with the important difference that residual variances can't be less than 1. The objective will necessarily be lower than the model with arbitrary row-specific variances, but the model is arguably more correct.
+This is almost the same as the model described in the previous section, with the important difference that residual variances cannot be less than 1. The objective will necessarily be lower than the model with arbitrary row-specific variances, but the model is arguably more correct.
 
-```{r gtex.byrow.plus.1}
-gtex.byrow.plus.1 <- flash(gtex, S = 1, greedy.Kmax = 5, var.type = 1, verbose = 0)
-c(byrow.elbo = gtex.byrow$elbo, byrow.p1.elbo = gtex.byrow.plus.1$elbo)
+```{r gtex_byrow_plus1}
+gtex_byrow_plus1 <- flash(gtex, S = 1, greedy_Kmax = 5, var_type = 1, verbose = 0)
+c(byrow_elbo = gtex_byrow$elbo, byrow_p1_elbo = gtex_byrow_plus1$elbo)
 ```
 
 ## Prior families
 
-In `flashier,` the prior families $\mathcal{G}^{(\ell)}_k$ and $\mathcal{G}^{(f)}_k$ are implied by the functions used to solve the EBNM problem
+In `flashier,` one does not define the prior families $\mathcal{G}^{(\ell)}_k$ and $\mathcal{G}^{(f)}_k$ directly, but rather implicitly as the functions used to solve the EBNM problem
 $$ \begin{gather} x_i \sim \mathcal{N} \left( \theta_i, s_i^2 \right) \\ \theta_i \sim g \in \mathcal{G}, \end{gather} $$
-with the $x_i$s and $s_i$s known observations and standard errors and the $\theta_i$s unknown "means." Note that the EBNM function must not only specify $\mathcal{G}$, but also the method for estimating $g \in \mathcal{G}$.
+with the $x_i$s and $s_i$s known observations and standard errors and the $\theta_i$s unknown "means." Note that these EBNM functions must not only specify $\mathcal{G}$, but also the method for estimating $g \in \mathcal{G}$.
 
-A number of useful EBNM functions are provided by package `ebnm` (Willwerscheid and Stephens2021). The default setting is `ebnm.fn = ebnm::ebnm_point_normal` which, as mentioned above, estimates $g$ from among the family of point-normal distributions:
+A number of useful EBNM functions are provided by package `ebnm` (Willwerscheid and Stephens 2021). The default setting is `ebnm_fn = ebnm_point_normal` which, as mentioned above, estimates $g$ from among the family of point-normal distributions:
 $$ g \sim \pi_0 \delta_0 + (1 - \pi_0) N(0, \sigma^2). $$
-More flexible families of priors are also available. For example, setting `ebnm.fn = ebnm::ebnm_normal_scale_mixture` estimates $g$ from among the family of scale mixtures of normals (which contains the family of point-normal distributions), while `ebnm::ebnm_unimodal_symmetric` takes $\mathcal{G}$ to be the family of all symmetric distributions that are unimodal at zero (which contains the family of scale mixtures of normals). 
+More flexible families of priors are also available. For example, setting `ebnm_fn = ebnm_normal_scale_mixture` estimates $g$ from among the family of scale mixtures of normals (which contains the family of point-normal distributions), while `ebnm_unimodal_symmetric` takes $\mathcal{G}$ to be the family of all symmetric distributions that are unimodal at zero (which contains the family of scale mixtures of normals). 
 
 ```{r gtex.normalmix}
-pn.time <- system.time(
-  gtex.pn <- flash(
+pn_time <- system.time(
+  gtex_pn <- flash(
     gtex, 
-    greedy.Kmax = 5, 
+    greedy_Kmax = 5, 
     verbose = 0
   )
 )
-normalmix.time <- system.time(
-  gtex.normalmix <- flash(
+normalmix_time <- system.time(
+  gtex_normalmix <- flash(
     gtex, 
-    greedy.Kmax = 5, 
-    ebnm.fn = ebnm::ebnm_normal_scale_mixture, 
+    greedy_Kmax = 5, 
+    ebnm_fn = ebnm_normal_scale_mixture, 
     verbose = 0
   )
 )
-unimix.time <- system.time(
-  gtex.unimix <- flash(
+unimix_time <- system.time(
+  gtex_unimix <- flash(
     gtex, 
-    greedy.Kmax = 5, 
-    ebnm.fn = ebnm::ebnm_unimodal_symmetric, 
+    greedy_Kmax = 5, 
+    ebnm_fn = ebnm_unimodal_symmetric, 
     verbose = 0
   )
 )
-c(pn.elbo = gtex.pn$elbo, smn.elbo = gtex.normalmix$elbo, symmuni.elbo = gtex.unimix$elbo)
-c(pn = pn.time[3], smn = normalmix.time[3], symmuni = unimix.time[3])
+c(pn_elbo = gtex_pn$elbo, smn_elbo = gtex_normalmix$elbo, symmuni_elbo = gtex_unimix$elbo)
+c(pn = pn_time[3], smn = normalmix_time[3], symmuni = unimix_time[3])
 ```
 
-To pass non-default arguments to `ebnm` functions, `flashier` provides the convenience function `as.ebnm.fn`, which simply passes its arguments to `ebnm::ebnm`. For example, to fit a normal prior with both mean and variance to be estimated,
+To pass non-default arguments to `ebnm` functions, `flashier` provides the convenience function `flash_ebnm`, which simply passes its arguments to `ebnm`. For example, to fit a normal prior with both mean and variance to be estimated,
 $$ g \sim N(\mu, \sigma^2), $$
-one can set `ebnm.fn = as.ebnm.fn(prior_family = "normal", mode = "estimate")`. The latter can be especially useful for fitting a "mean" factor such as the first factor in the `gtex` example 
-(which we wouldn't expect to be centered at zero, since the data isn't centered):
+one can set `ebnm_fn = flash_ebnm(prior_family = "normal", mode = "estimate")`. The latter can be especially useful for fitting a "mean" factor such as the first factor in the `gtex` example 
+(which we wouldn't expect to be centered at zero, since the data is not centered):
 
 ```{r gtex.w.mean}
-gtex.w.mean <- flash(
+gtex_intercept <- flash(
   gtex, 
-  greedy.Kmax = 1,
-  ebnm.fn = as.ebnm.fn(prior_family = "normal", mode = "estimate"),
+  greedy_Kmax = 1,
+  ebnm_fn = flash_ebnm(prior_family = "normal", mode = "estimate"),
   verbose = 0
 )
 ```
@@ -198,10 +159,10 @@ gtex.w.mean <- flash(
 Finally, one can assign different EBNM functions to the loadings $L$ and the factors $F$. For instance, one can obtain flexible unimodal factors with normally distributed loadings as follows:
 
 ```{r gtex.nn}
-gtex.diff.ebnm <- flash(
+gtex_diff_ebnm <- flash(
   gtex, 
-  greedy.Kmax = 5, 
-  ebnm.fn = c(ebnm::ebnm_normal, ebnm::ebnm_unimodal_symmetric),
+  greedy_Kmax = 5, 
+  ebnm_fn = c(ebnm_normal, ebnm_unimodal_symmetric),
   verbose = 0
 )
 ```
@@ -211,62 +172,38 @@ gtex.diff.ebnm <- flash(
 The above models are "greedily" fit by updating a first factor/loadings pair to optimize the ELBO, then adding and optimizing a second pair while leaving the first fixed, and so on. Optionally, one may choose to "backfit" a model by iteratively updating pairs one at a time until all have converged. In this way, factors that are added early on can, so to speak, use information contained in subsequent factors to improve the overall model fit. The improvement can be considerable:
 
 ```{r backfit}
-bf.time <- system.time(
-  gtex.bf <- flash(
+bf_time <- system.time(
+  gtex_bf <- flash(
     gtex, 
-    greedy.Kmax = 5, 
-    var.type = 1, 
+    greedy_Kmax = 5, 
+    var_type = 1, 
     backfit = TRUE, 
     verbose = 0
   )
 )
-c(greedy.elbo = gtex.byrow$elbo, bf.elbo = gtex.bf$elbo)
-c(greedy = byrow.time[3], bf = bf.time[3])
+c(greedy_elbo = gtex_byrow$elbo, bf_elbo = gtex_bf$elbo)
 
-plot.factors(gtex.bf)
+plot(gtex_bf, pm_colors = gtex_colors, include_scree = FALSE)
 ```
 
 ## Sampling from the posterior
 
 One of the list elements in the object returned by `flash` is a function that can sample from posterior distributions on loadings and factors. Take the backfitted object above as an example. To better understand which tissues are bound up with strong effects in whole blood, I would like confidence intervals for the third factor. I construct 95% confidence intervals using 200 samples.
+
 ```{r final.bf.ci}
 # Use returned sampler to sample from posterior.
-samp <- gtex.bf$sampler(nsamp = 200)
+samp <- gtex_bf$sampler(nsamp = 200)
 # Only keep factor 3.
-factor3.samp <- lapply(samp, function(x) x[[2]][, 3])
+factor3_samp <- lapply(samp, function(x) x[[2]][, 3])
 # Normalize the loadings.
-factor3.samp <- sapply(factor3.samp, function(x) x / sqrt(sum(x^2)))
+factor3_samp <- sapply(factor3_samp, function(x) x / max(abs(x)))
 # Get 95% confidence intervals.
-factor3.ci <- apply(factor3.samp, 1, quantile, c(0.025, 0.975))
+factor3_ci <- apply(factor3_samp, 1, quantile, c(0.025, 0.975))
+```
 
-# Put data into data frame and plot.
-vals <- ldf(gtex.bf)$F[, 3]
-df <- data.frame(
-  variable = colnames(gtex), 
-  value = vals, 
-  lower.ci = factor3.ci[1, ], 
-  upper.ci = factor3.ci[2, ]
-)
-ggplot(df, aes_string(x = "variable", y = "value", fill = "variable")) +
-  geom_bar(stat = "identity", width = 0.6, position = position_dodge()) +
-  geom_errorbar(
-    aes(ymin = lower.ci, ymax = upper.ci), 
-    width = .4,
-    position = position_dodge(.9)
-  ) +
-  scale_fill_manual(values = gtex.colors) +
-  scale_x_discrete(labels = NULL) +
-  ylim(-1, 0.2) +
-  theme_grey() +
-  theme(
-    legend.position="right",
-    legend.text = element_text(size = 6),
-    legend.title = element_blank()
-  ) +
-  labs(y = "", x = "") +
-  guides(fill = guide_legend(
-    ncol = 1, 
-    keyheight = 3.75 / 6, 
-    keywidth = 3.75 / 15)
-  )
+Since the `plot` method returns a `ggplot2` object, it can be customized using `ggplot` syntax, making the addition of error bars a simple task:
+
+```{r final.bf.ci.plot}
+plot(gtex_bf, kset = 3, pm_colors = gtex_colors, include_scree = FALSE) +
+  geom_errorbar(aes(ymin = factor3_ci[1, ], ymax = factor3_ci[2, ]))
 ```
